@@ -15,11 +15,11 @@ package io.trino.operator;
 
 import com.google.common.primitives.Ints;
 import io.airlift.slice.SizeOf;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -27,23 +27,33 @@ import static com.google.common.base.Verify.verify;
 import static io.airlift.slice.SizeOf.SIZE_OF_INT;
 import static io.airlift.slice.SizeOf.SIZE_OF_LONG;
 import static io.airlift.slice.SizeOf.instanceSize;
-import static io.airlift.slice.SizeOf.sizeOfObjectArray;
+import static io.airlift.slice.SizeOf.sizeOf;
+import static java.lang.Math.addExact;
+import static java.lang.Math.clamp;
 import static java.lang.Math.max;
+import static java.lang.Math.subtractExact;
 import static java.util.Objects.checkIndex;
 
+/**
+ * A related implementation of {@link VariableWidthData} exists in {@link AppendOnlyVariableWidthData} which reduces
+ * the size of each variable width pointer at the cost of not supporting {@link VariableWidthData#free}. If your data
+ * structure does not need to support moving variable width data after insertion, that implementation will consume
+ * less memory and should be used instead.
+ */
 public final class VariableWidthData
 {
     private static final int INSTANCE_SIZE = instanceSize(VariableWidthData.class);
 
     public static final int MIN_CHUNK_SIZE = 1024;
     public static final int MAX_CHUNK_SIZE = 8 * 1024 * 1024;
+    private static final int DOUBLING_CHUNK_THRESHOLD = 512 * 1024;
 
     public static final int POINTER_SIZE = SIZE_OF_INT + SIZE_OF_INT + SIZE_OF_INT;
 
     private static final VarHandle INT_HANDLE = MethodHandles.byteArrayViewVarHandle(int[].class, ByteOrder.LITTLE_ENDIAN);
     public static final byte[] EMPTY_CHUNK = new byte[0];
 
-    private final List<byte[]> chunks = new ArrayList<>();
+    private final ObjectArrayList<byte[]> chunks = new ObjectArrayList<>();
     private int openChunkOffset;
 
     private long chunksRetainedSizeInBytes;
@@ -70,14 +80,16 @@ public final class VariableWidthData
     {
         this.chunks.addAll(chunks);
         this.openChunkOffset = openChunkOffset;
-        this.chunksRetainedSizeInBytes = chunks.stream().mapToLong(SizeOf::sizeOf).sum();
+        this.chunksRetainedSizeInBytes = chunks.stream().mapToLong(SizeOf::sizeOf).reduce(0L, Math::addExact);
         this.allocatedBytes = chunks.stream().mapToLong(chunk -> chunk.length).sum();
         this.freeBytes = 0;
     }
 
     public long getRetainedSizeBytes()
     {
-        return INSTANCE_SIZE + chunksRetainedSizeInBytes + sizeOfObjectArray(chunks.size());
+        return addExact(
+                INSTANCE_SIZE,
+                addExact(chunksRetainedSizeInBytes, sizeOf(chunks.elements())));
     }
 
     public List<byte[]> getAllChunks()
@@ -102,21 +114,21 @@ public final class VariableWidthData
             return EMPTY_CHUNK;
         }
 
-        byte[] openChunk = chunks.isEmpty() ? EMPTY_CHUNK : chunks.get(chunks.size() - 1);
+        byte[] openChunk = chunks.isEmpty() ? EMPTY_CHUNK : chunks.getLast();
         if (openChunk.length - openChunkOffset < size) {
             // record unused space as free bytes
             freeBytes += (openChunk.length - openChunkOffset);
 
-            // allocate enough space for 32 values of the current size, or double the current chunk size, whichever is larger
-            int newSize = Ints.saturatedCast(max(size * 32L, openChunk.length * 2L));
+            // allocate enough space for 32 values of the current size, or 1.5x the current chunk size, whichever is larger
+            int newSize = Ints.saturatedCast(max(size * 32L, nextChunkSize(openChunk.length)));
             // constrain to be between min and max chunk size
-            newSize = Ints.constrainToRange(newSize, MIN_CHUNK_SIZE, MAX_CHUNK_SIZE);
+            newSize = clamp(newSize, MIN_CHUNK_SIZE, MAX_CHUNK_SIZE);
             // jumbo rows get a separate allocation
             newSize = max(newSize, size);
             openChunk = new byte[newSize];
             chunks.add(openChunk);
             allocatedBytes += newSize;
-            chunksRetainedSizeInBytes += SizeOf.sizeOf(openChunk);
+            chunksRetainedSizeInBytes = addExact(chunksRetainedSizeInBytes, sizeOf(openChunk));
             openChunkOffset = 0;
         }
 
@@ -152,7 +164,7 @@ public final class VariableWidthData
         // if this is the only value written to the chunk, we can simply replace the chunk with the empty chunk
         if (valueLength == valueChunk.length) {
             chunks.set(valueChunkIndex, EMPTY_CHUNK);
-            chunksRetainedSizeInBytes -= SizeOf.sizeOf(valueChunk);
+            chunksRetainedSizeInBytes = subtractExact(chunksRetainedSizeInBytes, sizeOf(valueChunk));
             allocatedBytes -= valueChunk.length;
             return;
         }
@@ -169,6 +181,15 @@ public final class VariableWidthData
         }
         checkIndex(chunkIndex, chunks.size());
         return chunks.get(chunkIndex);
+    }
+
+    // growth factor for each chunk doubles up to 512KB, then increases by 1.5x for each chunk after that
+    private static long nextChunkSize(long previousChunkSize)
+    {
+        if (previousChunkSize < DOUBLING_CHUNK_THRESHOLD) {
+            return previousChunkSize * 2;
+        }
+        return previousChunkSize + (previousChunkSize >> 1);
     }
 
     private static int getChunkIndex(byte[] pointer, int pointerOffset)
