@@ -21,6 +21,7 @@ import io.trino.matching.Capture;
 import io.trino.matching.Captures;
 import io.trino.matching.Pattern;
 import io.trino.matching.PropertyPattern;
+import io.trino.sql.ir.Expression;
 import io.trino.sql.planner.OrderingScheme;
 import io.trino.sql.planner.Symbol;
 import io.trino.sql.planner.SymbolsExtractor;
@@ -29,7 +30,6 @@ import io.trino.sql.planner.plan.Assignments;
 import io.trino.sql.planner.plan.PlanNode;
 import io.trino.sql.planner.plan.ProjectNode;
 import io.trino.sql.planner.plan.WindowNode;
-import io.trino.sql.tree.Expression;
 
 import java.util.Iterator;
 import java.util.List;
@@ -162,7 +162,7 @@ public final class GatherAndMergeWindows
 
             WindowNode newTarget = (WindowNode) target.replaceChildren(ImmutableList.of(newTargetChild));
             Set<Symbol> newTargetOutputs = ImmutableSet.copyOf(newTarget.getOutputSymbols());
-            if (!newTargetOutputs.containsAll(projects.get(projects.size() - 1).getOutputSymbols())) {
+            if (!newTargetOutputs.containsAll(projects.getLast().getOutputSymbols())) {
                 // The new target node is hiding some of the projections, which makes this rewrite incorrect.
                 return Optional.empty();
             }
@@ -215,7 +215,7 @@ public final class GatherAndMergeWindows
         @Override
         protected Optional<PlanNode> manipulateAdjacentWindowNodes(WindowNode parent, WindowNode child, Context context)
         {
-            if ((compare(parent, child) < 0) && (!dependsOn(parent, child))) {
+            if ((compare(parent, child) < 0) && !dependsOn(parent, child)) {
                 PlanNode transposedWindows = transpose(parent, child);
                 return Optional.of(
                         restrictOutputs(context.getIdAllocator(), transposedWindows, ImmutableSet.copyOf(parent.getOutputSymbols()))
@@ -249,7 +249,7 @@ public final class GatherAndMergeWindows
                 Symbol symbol1 = iterator1.next();
                 Symbol symbol2 = iterator2.next();
 
-                int partitionByComparison = symbol1.compareTo(symbol2);
+                int partitionByComparison = symbol1.name().compareTo(symbol2.name());
                 if (partitionByComparison != 0) {
                     return partitionByComparison;
                 }
@@ -278,18 +278,18 @@ public final class GatherAndMergeWindows
 
             OrderingScheme o1OrderingScheme = o1.getOrderingScheme().get();
             OrderingScheme o2OrderingScheme = o2.getOrderingScheme().get();
-            Iterator<Symbol> iterator1 = o1OrderingScheme.getOrderBy().iterator();
-            Iterator<Symbol> iterator2 = o2OrderingScheme.getOrderBy().iterator();
+            Iterator<Symbol> iterator1 = o1OrderingScheme.orderBy().iterator();
+            Iterator<Symbol> iterator2 = o2OrderingScheme.orderBy().iterator();
 
             while (iterator1.hasNext() && iterator2.hasNext()) {
                 Symbol symbol1 = iterator1.next();
                 Symbol symbol2 = iterator2.next();
 
-                int orderByComparison = symbol1.compareTo(symbol2);
+                int orderByComparison = symbol1.name().compareTo(symbol2.name());
                 if (orderByComparison != 0) {
                     return orderByComparison;
                 }
-                int sortOrderComparison = o1OrderingScheme.getOrdering(symbol1).compareTo(o2OrderingScheme.getOrdering(symbol2));
+                int sortOrderComparison = o1OrderingScheme.ordering(symbol1).compareTo(o2OrderingScheme.ordering(symbol2));
                 if (sortOrderComparison != 0) {
                     return sortOrderComparison;
                 }
