@@ -29,9 +29,7 @@ public final class FunctionParametricType
 {
     public static final FunctionParametricType FUNCTION = new FunctionParametricType();
 
-    private FunctionParametricType()
-    {
-    }
+    private FunctionParametricType() {}
 
     @Override
     public String getName()
@@ -49,6 +47,6 @@ public final class FunctionParametricType
                 parameters);
         List<Type> types = parameters.stream().map(TypeParameter::getType).collect(toList());
 
-        return new FunctionType(types.subList(0, types.size() - 1), types.get(types.size() - 1));
+        return new FunctionType(types.subList(0, types.size() - 1), types.getLast());
     }
 }
