@@ -15,17 +15,15 @@ package io.trino.plugin.bigquery;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import io.trino.Session;
 import io.trino.testing.QueryRunner;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Optional;
 import java.util.Set;
 
-import static io.trino.testing.DataProviders.toDataProvider;
 import static io.trino.testing.TestingNames.randomNameSuffix;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class TestBigQueryAvroConnectorTest
         extends BaseBigQueryConnectorTest
@@ -38,16 +36,21 @@ public class TestBigQueryAvroConnectorTest
             .add("a:colon")
             .add("an'apostrophe")
             .add("0startwithdigit")
+            .add("カラム")
             .build();
 
     @Override
     protected QueryRunner createQueryRunner()
             throws Exception
     {
-        return BigQueryQueryRunner.createQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of("bigquery.job.label-name", "trino_query", "bigquery.job.label-format", "q_$QUERY_ID__t_$TRACE_TOKEN"),
-                REQUIRED_TPCH_TABLES);
+        return BigQueryQueryRunner.builder()
+                .setConnectorProperties(ImmutableMap.<String, String>builder()
+                        .put("bigquery.arrow-serialization.enabled", "false")
+                        .put("bigquery.job.label-name", "trino_query")
+                        .put("bigquery.job.label-format", "q_$QUERY_ID__t_$TRACE_TOKEN")
+                        .buildOrThrow())
+                .setInitialTables(REQUIRED_TPCH_TABLES)
+                .build();
     }
 
     @Override
@@ -60,30 +63,32 @@ public class TestBigQueryAvroConnectorTest
     }
 
     // TODO: Disable all operations for unsupported column names
-    @Test(dataProvider = "unsupportedColumnNameDataProvider")
-    public void testSelectFailsForColumnName(String columnName)
+    @Test
+    public void testSelectFailsForColumnName()
     {
-        String tableName = "test.test_unsupported_column_name" + randomNameSuffix();
+        for (String columnName : UNSUPPORTED_COLUMN_NAMES) {
+            String tableName = "test.test_unsupported_column_name" + randomNameSuffix();
 
-        assertUpdate("CREATE TABLE " + tableName + "(\"" + columnName + "\" varchar(50))");
-        try {
-            assertUpdate("INSERT INTO " + tableName + " VALUES ('test value')", 1);
-            // The storage API can't read the table, but query based API can read it
-            assertThatThrownBy(() -> query("SELECT * FROM " + tableName))
-                    .cause()
-                    .hasMessageMatching(".*(Illegal initial character|Invalid name).*");
-            assertThat(bigQuerySqlExecutor.executeQuery("SELECT * FROM " + tableName).getValues())
-                    .extracting(field -> field.get(0).getStringValue())
-                    .containsExactly("test value");
-        }
-        finally {
-            assertUpdate("DROP TABLE " + tableName);
+            assertUpdate("CREATE TABLE " + tableName + "(\"" + columnName + "\" varchar(50))");
+            try {
+                assertUpdate("INSERT INTO " + tableName + " VALUES ('test value')", 1);
+                // The storage API can't read the table, but query based API can read it
+                assertThat(query("SELECT * FROM " + tableName))
+                        .failure().hasMessageMatching("(Cannot create read|Invalid Avro schema).*(Illegal initial character|Invalid name).*");
+                assertThat(bigQuerySqlExecutor.executeQuery("SELECT * FROM " + tableName).getValues())
+                        .extracting(field -> field.getFirst().getStringValue())
+                        .containsExactly("test value");
+            }
+            finally {
+                assertUpdate("DROP TABLE " + tableName);
+            }
         }
     }
 
-    @DataProvider
-    public Object[][] unsupportedColumnNameDataProvider()
+    @Override
+    protected Session withoutSmallFileThreshold(Session session)
     {
-        return UNSUPPORTED_COLUMN_NAMES.stream().collect(toDataProvider());
+        // Bigquery does not have small file threshold properties
+        return session;
     }
 }
