@@ -13,15 +13,15 @@
  */
 package io.trino.plugin.bigquery;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.trino.testing.AbstractTestQueryFramework;
 import io.trino.testing.QueryRunner;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 import static io.trino.plugin.bigquery.BigQueryQueryRunner.BigQuerySqlExecutor;
 import static io.trino.testing.TestingNames.randomNameSuffix;
-import static org.testng.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class TestBigQueryMetadataCaching
         extends AbstractTestQueryFramework
@@ -33,10 +33,9 @@ public class TestBigQueryMetadataCaching
             throws Exception
     {
         this.bigQuerySqlExecutor = new BigQuerySqlExecutor();
-        return BigQueryQueryRunner.createQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of("bigquery.metadata.cache-ttl", "5m"),
-                ImmutableList.of());
+        return BigQueryQueryRunner.builder()
+                .setConnectorProperties(Map.of("bigquery.metadata.cache-ttl", "5m"))
+                .build();
     }
 
     @Test
@@ -45,14 +44,14 @@ public class TestBigQueryMetadataCaching
         String schema = "test_metadata_caching_" + randomNameSuffix();
         try {
             getQueryRunner().execute("CREATE SCHEMA " + schema);
-            assertEquals(getQueryRunner().execute("SHOW SCHEMAS IN bigquery LIKE '" + schema + "'").getOnlyValue(), schema);
+            assertThat(getQueryRunner().execute("SHOW SCHEMAS IN bigquery LIKE '" + schema + "'").getOnlyValue()).isEqualTo(schema);
 
             String schemaTableName = schema + ".test_metadata_caching";
             getQueryRunner().execute("CREATE TABLE " + schemaTableName + " AS SELECT * FROM tpch.tiny.region");
-            assertEquals(getQueryRunner().execute("SELECT * FROM " + schemaTableName).getRowCount(), 5);
+            assertThat(getQueryRunner().execute("SELECT * FROM " + schemaTableName).getRowCount()).isEqualTo(5);
 
             bigQuerySqlExecutor.execute("DROP SCHEMA " + schema + " CASCADE");
-            assertEquals(getQueryRunner().execute("SHOW SCHEMAS IN bigquery LIKE '" + schema + "'").getOnlyValue(), schema);
+            assertThat(getQueryRunner().execute("SHOW SCHEMAS IN bigquery LIKE '" + schema + "'").getOnlyValue()).isEqualTo(schema);
 
             assertQueryFails("SELECT * FROM " + schemaTableName, ".*Schema '.+' does not exist.*");
         }
