@@ -14,7 +14,9 @@
 package io.trino.plugin.hive.util;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import io.airlift.units.DataSize;
+import io.trino.metastore.HiveTypeName;
 import io.trino.plugin.hive.AcidInfo;
 import io.trino.plugin.hive.HiveColumnHandle;
 import io.trino.plugin.hive.HivePartitionKey;
@@ -23,92 +25,87 @@ import io.trino.plugin.hive.HiveSplit.BucketConversion;
 import io.trino.plugin.hive.HiveStorageFormat;
 import io.trino.plugin.hive.InternalHiveSplit;
 import io.trino.plugin.hive.InternalHiveSplit.InternalHiveBlock;
-import io.trino.plugin.hive.TableToPartitionMapping;
+import io.trino.plugin.hive.Schema;
 import io.trino.plugin.hive.fs.BlockLocation;
 import io.trino.plugin.hive.fs.TrinoFileStatus;
 import io.trino.plugin.hive.orc.OrcPageSourceFactory;
 import io.trino.plugin.hive.parquet.ParquetPageSourceFactory;
 import io.trino.plugin.hive.rcfile.RcFilePageSourceFactory;
-import io.trino.plugin.hive.s3select.S3SelectPushdown;
 import io.trino.spi.HostAddress;
 import io.trino.spi.predicate.Domain;
 import io.trino.spi.predicate.TupleDomain;
-import org.apache.hadoop.fs.FileStatus;
-import org.apache.hadoop.fs.FileSystem;
-import org.apache.hadoop.mapred.FileSplit;
 
-import java.io.IOException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
-import java.util.Properties;
 import java.util.function.BooleanSupplier;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static io.airlift.slice.Slices.utf8Slice;
 import static io.trino.plugin.hive.HiveColumnHandle.isPathColumnHandle;
+import static io.trino.plugin.hive.util.AcidTables.isFullAcidTable;
+import static io.trino.plugin.hive.util.HiveUtil.getSerializationLibraryName;
 import static java.util.Objects.requireNonNull;
 
 public class InternalHiveSplitFactory
 {
-    private final FileSystem fileSystem;
     private final String partitionName;
     private final HiveStorageFormat storageFormat;
-    private final Properties strippedSchema;
+    private final Schema strippedSchema;
     private final List<HivePartitionKey> partitionKeys;
     private final Optional<Domain> pathDomain;
-    private final TableToPartitionMapping tableToPartitionMapping;
+    private final Map<Integer, HiveTypeName> hiveColumnCoercions;
     private final BooleanSupplier partitionMatchSupplier;
     private final Optional<BucketConversion> bucketConversion;
     private final Optional<HiveSplit.BucketValidation> bucketValidation;
     private final long minimumTargetSplitSizeInBytes;
     private final Optional<Long> maxSplitFileSize;
     private final boolean forceLocalScheduling;
-    private final boolean s3SelectPushdownEnabled;
 
     public InternalHiveSplitFactory(
-            FileSystem fileSystem,
             String partitionName,
             HiveStorageFormat storageFormat,
-            Properties schema,
+            Map<String, String> schema,
             List<HivePartitionKey> partitionKeys,
             TupleDomain<HiveColumnHandle> effectivePredicate,
             BooleanSupplier partitionMatchSupplier,
-            TableToPartitionMapping tableToPartitionMapping,
+            Map<Integer, HiveTypeName> hiveColumnCoercions,
             Optional<BucketConversion> bucketConversion,
             Optional<HiveSplit.BucketValidation> bucketValidation,
             DataSize minimumTargetSplitSize,
             boolean forceLocalScheduling,
-            boolean s3SelectPushdownEnabled,
             Optional<Long> maxSplitFileSize)
     {
-        this.fileSystem = requireNonNull(fileSystem, "fileSystem is null");
         this.partitionName = requireNonNull(partitionName, "partitionName is null");
         this.storageFormat = requireNonNull(storageFormat, "storageFormat is null");
         this.strippedSchema = stripUnnecessaryProperties(requireNonNull(schema, "schema is null"));
         this.partitionKeys = requireNonNull(partitionKeys, "partitionKeys is null");
         pathDomain = getPathDomain(requireNonNull(effectivePredicate, "effectivePredicate is null"));
         this.partitionMatchSupplier = requireNonNull(partitionMatchSupplier, "partitionMatchSupplier is null");
-        this.tableToPartitionMapping = requireNonNull(tableToPartitionMapping, "tableToPartitionMapping is null");
+        this.hiveColumnCoercions = ImmutableMap.copyOf(requireNonNull(hiveColumnCoercions, "hiveColumnCoercions is null"));
         this.bucketConversion = requireNonNull(bucketConversion, "bucketConversion is null");
         this.bucketValidation = requireNonNull(bucketValidation, "bucketValidation is null");
         this.forceLocalScheduling = forceLocalScheduling;
-        this.s3SelectPushdownEnabled = s3SelectPushdownEnabled;
         this.minimumTargetSplitSizeInBytes = minimumTargetSplitSize.toBytes();
         this.maxSplitFileSize = requireNonNull(maxSplitFileSize, "maxSplitFileSize is null");
         checkArgument(minimumTargetSplitSizeInBytes > 0, "minimumTargetSplitSize must be > 0, found: %s", minimumTargetSplitSize);
     }
 
-    private static Properties stripUnnecessaryProperties(Properties schema)
+    private static Schema stripUnnecessaryProperties(Map<String, String> schema)
     {
         // Sending the full schema with every split is costly and can be avoided for formats supported natively
-        schema = OrcPageSourceFactory.stripUnnecessaryProperties(schema);
-        schema = ParquetPageSourceFactory.stripUnnecessaryProperties(schema);
-        schema = RcFilePageSourceFactory.stripUnnecessaryProperties(schema);
-        return schema;
+        String serializationLibraryName = getSerializationLibraryName(schema);
+        boolean isFullAcidTable = isFullAcidTable(schema);
+        Map<String, String> serdeProperties = schema;
+        if (RcFilePageSourceFactory.stripUnnecessaryProperties(serializationLibraryName)
+                || OrcPageSourceFactory.stripUnnecessaryProperties(serializationLibraryName)
+                || ParquetPageSourceFactory.stripUnnecessaryProperties(serializationLibraryName)) {
+            serdeProperties = ImmutableMap.of();
+        }
+        return new Schema(serializationLibraryName, isFullAcidTable, serdeProperties);
     }
 
     public String getPartitionName()
@@ -132,23 +129,6 @@ public class InternalHiveSplitFactory
                 tableBucketNumber,
                 splittable,
                 acidInfo);
-    }
-
-    public Optional<InternalHiveSplit> createInternalHiveSplit(FileSplit split)
-            throws IOException
-    {
-        FileStatus file = fileSystem.getFileStatus(split.getPath());
-        return createInternalHiveSplit(
-                split.getPath().toString(),
-                BlockLocation.fromHiveBlockLocations(fileSystem.getFileBlockLocations(file, split.getStart(), split.getLength())),
-                split.getStart(),
-                split.getLength(),
-                file.getLen(),
-                file.getModificationTime(),
-                OptionalInt.empty(),
-                OptionalInt.empty(),
-                false,
-                Optional.empty());
     }
 
     private Optional<InternalHiveSplit> createInternalHiveSplit(
@@ -220,10 +200,9 @@ public class InternalHiveSplitFactory
                 tableBucketNumber,
                 splittable,
                 forceLocalScheduling && allBlocksHaveAddress(blocks),
-                tableToPartitionMapping,
+                hiveColumnCoercions,
                 bucketConversion,
                 bucketValidation,
-                s3SelectPushdownEnabled && S3SelectPushdown.isCompressionCodecSupported(strippedSchema, path),
                 acidInfo,
                 partitionMatchSupplier));
     }
@@ -240,11 +219,11 @@ public class InternalHiveSplitFactory
                 start,
                 blocks.get(0).getStart());
         checkArgument(
-                start + length == blocks.get(blocks.size() - 1).getEnd(),
+                start + length == blocks.getLast().getEnd(),
                 "Split (%s) end (%s) does not match last block end (%s)",
                 path,
                 start + length,
-                blocks.get(blocks.size() - 1).getEnd());
+                blocks.getLast().getEnd());
         for (int i = 1; i < blocks.size(); i++) {
             checkArgument(
                     blocks.get(i - 1).getEnd() == blocks.get(i).getStart(),
