@@ -13,14 +13,16 @@
  */
 package io.trino.plugin.oracle;
 
-import com.google.common.collect.ImmutableMap;
 import io.airlift.testing.Closeables;
 import io.trino.testing.QueryRunner;
-import org.testng.annotations.AfterClass;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.TestInstance;
 
-import static io.trino.plugin.oracle.TestingOracleServer.TEST_PASS;
-import static io.trino.plugin.oracle.TestingOracleServer.TEST_USER;
+import java.util.Map;
 
+import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
+
+@TestInstance(PER_CLASS)
 public class TestOraclePoolConnectorSmokeTest
         extends BaseOracleConnectorSmokeTest
 {
@@ -31,19 +33,13 @@ public class TestOraclePoolConnectorSmokeTest
             throws Exception
     {
         oracleServer = new TestingOracleServer();
-        return OracleQueryRunner.createOracleQueryRunner(
-                oracleServer,
-                ImmutableMap.of(),
-                ImmutableMap.<String, String>builder()
-                        .put("connection-url", oracleServer.getJdbcUrl())
-                        .put("connection-user", TEST_USER)
-                        .put("connection-password", TEST_PASS)
-                        .put("oracle.connection-pool.enabled", "true")
-                        .buildOrThrow(),
-                REQUIRED_TPCH_TABLES);
+        return OracleQueryRunner.builder(oracleServer)
+                .addConnectorProperties(Map.of("oracle.connection-pool.enabled", "true"))
+                .setInitialTables(REQUIRED_TPCH_TABLES)
+                .build();
     }
 
-    @AfterClass(alwaysRun = true)
+    @AfterAll
     public final void destroy()
             throws Exception
     {
