@@ -14,18 +14,19 @@
 package io.trino.plugin.postgresql;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.trino.testing.AbstractTestQueryFramework;
-import io.trino.testing.DistributedQueryRunner;
 import io.trino.testing.QueryRunner;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.parallel.Execution;
 
-import static io.trino.plugin.postgresql.PostgreSqlQueryRunner.createPostgreSqlQueryRunner;
+import java.util.Map;
+
 import static io.trino.tpch.TpchTable.CUSTOMER;
 import static io.trino.tpch.TpchTable.NATION;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.parallel.ExecutionMode.SAME_THREAD;
 
-@Test(singleThreaded = true)
+@Execution(SAME_THREAD)
 public class TestRemoteQueryCommentLogging
         extends AbstractTestQueryFramework
 {
@@ -36,13 +37,10 @@ public class TestRemoteQueryCommentLogging
             throws Exception
     {
         postgreSqlServer = closeAfterClass(new TestingPostgreSqlServer());
-        DistributedQueryRunner distributedQueryRunner = createPostgreSqlQueryRunner(
-                postgreSqlServer,
-                ImmutableMap.of(),
-                ImmutableMap.of("query.comment-format", "query executed by $USER"),
-                ImmutableList.of(CUSTOMER, NATION));
-
-        return distributedQueryRunner;
+        return PostgreSqlQueryRunner.builder(postgreSqlServer)
+                .addConnectorProperties(Map.of("query.comment-format", "query executed by $USER"))
+                .setInitialTables(ImmutableList.of(CUSTOMER, NATION))
+                .build();
     }
 
     @Test
@@ -64,7 +62,8 @@ public class TestRemoteQueryCommentLogging
 
         assertThat(postgreSqlServer.recordEventsForOperations(() -> getQueryRunner().execute("DELETE FROM postgresql.tpch.log_nation_test_table"))
                 .stopEventsRecording()
-                .streamQueriesContaining("log_nation_test_table"))
+                // Filter that the identifier not the variable
+                .streamQueriesContaining("\"log_nation_test_table\""))
                 .allMatch(query -> query.endsWith("/*query executed by user*/"))
                 .size()
                 .isEqualTo(1);
