@@ -22,7 +22,7 @@ import io.trino.spi.resourcegroups.ResourceGroupId;
 import io.trino.spi.resourcegroups.SelectionContext;
 import io.trino.spi.resourcegroups.SelectionCriteria;
 import io.trino.spi.session.ResourceEstimates;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Optional;
 import java.util.Set;
@@ -31,7 +31,7 @@ import java.util.regex.Pattern;
 import static io.airlift.units.DataSize.Unit.MEGABYTE;
 import static io.airlift.units.DataSize.Unit.TERABYTE;
 import static java.util.concurrent.TimeUnit.MINUTES;
-import static org.testng.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class TestStaticSelector
 {
@@ -48,10 +48,110 @@ public class TestStaticSelector
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
                 new ResourceGroupIdTemplate("global.foo"));
-        assertEquals(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
-        assertEquals(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
-        assertEquals(selector.match(newSelectionCriteria("A.user", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)), Optional.empty());
+        assertThat(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("A.user", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES))).isEqualTo(Optional.empty());
+    }
+
+    @Test
+    public void testUserRegexCustomGroup()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo_userA_A");
+        StaticSelector selector = new StaticSelector(
+                Optional.of(Pattern.compile("user(?<suffix>.*)")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo_${USER}_${suffix}"));
+        assertThat(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES))).hasValueSatisfying(context -> {
+            assertThat(context.getResourceGroupId()).isEqualTo(resourceGroupId);
+            assertThat(context.getContext().getVariableNames()).containsExactlyInAnyOrder("suffix", "USER");
+        });
+    }
+
+    @Test
+    public void testOriginalUserRegex()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo");
+        StaticSelector selector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(Pattern.compile("originalUser.*")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo"));
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "originalUserA", null)).map(SelectionContext::getResourceGroupId)).hasValue(resourceGroupId);
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "originalUserB", null)).map(SelectionContext::getResourceGroupId)).hasValue(resourceGroupId);
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "A.originalUser", null))).isEmpty();
+    }
+
+    @Test
+    public void testOriginalUserRegexCustomGroup()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo_originalUserA_A");
+        StaticSelector selector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(Pattern.compile("(?<original>originalUser(?<suffix>.*))")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo_${original}_${suffix}"));
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "originalUserA", null))).hasValueSatisfying(context -> {
+            assertThat(context.getResourceGroupId()).isEqualTo(resourceGroupId);
+            assertThat(context.getContext().getVariableNames()).containsExactlyInAnyOrder("suffix", "original");
+        });
+    }
+
+    @Test
+    public void testAuthenticatedUserRegex()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo");
+        StaticSelector selector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(Pattern.compile("authenticatedUser.*")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo"));
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "userA", "authenticatedUserA")).map(SelectionContext::getResourceGroupId)).hasValue(resourceGroupId);
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "userA", "authenticatedUserB")).map(SelectionContext::getResourceGroupId)).hasValue(resourceGroupId);
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "userA", "A.authenticatedUser"))).isEmpty();
+    }
+
+    @Test
+    public void testAuthenticatedUserRegexCustomGroup()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo_authenticatedUser_A");
+        StaticSelector selector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(Pattern.compile("(?<auth>authenticatedUser)(?<suffix>.*)")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo_${auth}_${suffix}"));
+        assertThat(selector.match(newSelectionCriteriaUsers("userA", "userA", "authenticatedUserA"))).hasValueSatisfying(context -> {
+            assertThat(context.getResourceGroupId()).isEqualTo(resourceGroupId);
+            assertThat(context.getContext().getVariableNames()).containsExactlyInAnyOrder("suffix", "auth");
+        });
     }
 
     @Test
@@ -61,14 +161,35 @@ public class TestStaticSelector
         StaticSelector selector = new StaticSelector(
                 Optional.empty(),
                 Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
                 Optional.of(Pattern.compile(".*source.*")),
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
                 new ResourceGroupIdTemplate("global.foo"));
-        assertEquals(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)), Optional.empty());
-        assertEquals(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
-        assertEquals(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES))).isEqualTo(Optional.empty());
+        assertThat(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+    }
+
+    @Test
+    public void testSourceRegexEmptyMatch()
+    {
+        ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo");
+        StaticSelector selector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(Pattern.compile("$^")),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                new ResourceGroupIdTemplate("global.foo"));
+        assertThat(selector.match(newSelectionCriteria("user", null, ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("user", "", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("user", "source", ImmutableSet.of(""), EMPTY_RESOURCE_ESTIMATES))).isEqualTo(Optional.empty());
     }
 
     @Test
@@ -79,14 +200,16 @@ public class TestStaticSelector
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
                 Optional.of(ImmutableList.of("tag1", "tag2")),
                 Optional.empty(),
                 Optional.empty(),
                 new ResourceGroupIdTemplate("global.foo"));
-        assertEquals(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1", "tag2"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
-        assertEquals(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES)), Optional.empty());
-        assertEquals(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES)), Optional.empty());
-        assertEquals(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1", "tag2", "tag3"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId), Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("userA", null, ImmutableSet.of("tag1", "tag2"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
+        assertThat(selector.match(newSelectionCriteria("userB", "source", ImmutableSet.of(), EMPTY_RESOURCE_ESTIMATES))).isEqualTo(Optional.empty());
+        assertThat(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1"), EMPTY_RESOURCE_ESTIMATES))).isEqualTo(Optional.empty());
+        assertThat(selector.match(newSelectionCriteria("A.user", "a source b", ImmutableSet.of("tag1", "tag2", "tag3"), EMPTY_RESOURCE_ESTIMATES)).map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
     }
 
     @Test
@@ -95,6 +218,8 @@ public class TestStaticSelector
         ResourceGroupId resourceGroupId = new ResourceGroupId(new ResourceGroupId("global"), "foo");
 
         StaticSelector smallQuerySelector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
@@ -110,8 +235,7 @@ public class TestStaticSelector
                 Optional.empty(),
                 new ResourceGroupIdTemplate("global.foo"));
 
-        assertEquals(
-                smallQuerySelector.match(
+        assertThat(smallQuerySelector.match(
                         newSelectionCriteria(
                                 "userA",
                                 null,
@@ -120,11 +244,9 @@ public class TestStaticSelector
                                         Optional.of(java.time.Duration.ofMinutes(4)),
                                         Optional.empty(),
                                         Optional.of(DataSize.of(400, MEGABYTE).toBytes()))))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.of(resourceGroupId));
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
 
-        assertEquals(
-                smallQuerySelector.match(
+        assertThat(smallQuerySelector.match(
                         newSelectionCriteria(
                                 "A.user",
                                 "a source b",
@@ -133,11 +255,9 @@ public class TestStaticSelector
                                         Optional.of(java.time.Duration.ofMinutes(4)),
                                         Optional.empty(),
                                         Optional.of(DataSize.of(600, MEGABYTE).toBytes()))))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.empty());
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.empty());
 
-        assertEquals(
-                smallQuerySelector.match(
+        assertThat(smallQuerySelector.match(
                         newSelectionCriteria(
                                 "userB",
                                 "source",
@@ -146,10 +266,11 @@ public class TestStaticSelector
                                         Optional.of(java.time.Duration.ofMinutes(4)),
                                         Optional.empty(),
                                         Optional.empty())))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.empty());
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.empty());
 
         StaticSelector largeQuerySelector = new StaticSelector(
+                Optional.empty(),
+                Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
@@ -163,8 +284,7 @@ public class TestStaticSelector
                 Optional.empty(),
                 new ResourceGroupIdTemplate("global.foo"));
 
-        assertEquals(
-                largeQuerySelector.match(
+        assertThat(largeQuerySelector.match(
                         newSelectionCriteria(
                                 "userA",
                                 null,
@@ -173,11 +293,9 @@ public class TestStaticSelector
                                         Optional.of(java.time.Duration.ofHours(100)),
                                         Optional.empty(),
                                         Optional.of(DataSize.of(4, TERABYTE).toBytes()))))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.empty());
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.empty());
 
-        assertEquals(
-                largeQuerySelector.match(
+        assertThat(largeQuerySelector.match(
                         newSelectionCriteria(
                                 "A.user",
                                 "a source b",
@@ -186,11 +304,9 @@ public class TestStaticSelector
                                         Optional.empty(),
                                         Optional.empty(),
                                         Optional.of(DataSize.of(6, TERABYTE).toBytes()))))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.of(resourceGroupId));
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
 
-        assertEquals(
-                largeQuerySelector.match(
+        assertThat(largeQuerySelector.match(
                         newSelectionCriteria(
                                 "userB",
                                 "source",
@@ -199,12 +315,16 @@ public class TestStaticSelector
                                         Optional.of(java.time.Duration.ofSeconds(1)),
                                         Optional.of(java.time.Duration.ofSeconds(1)),
                                         Optional.of(DataSize.of(6, TERABYTE).toBytes()))))
-                        .map(SelectionContext::getResourceGroupId),
-                Optional.of(resourceGroupId));
+                .map(SelectionContext::getResourceGroupId)).isEqualTo(Optional.of(resourceGroupId));
     }
 
     private SelectionCriteria newSelectionCriteria(String user, String source, Set<String> tags, ResourceEstimates resourceEstimates)
     {
-        return new SelectionCriteria(true, user, ImmutableSet.of(), Optional.ofNullable(source), tags, resourceEstimates, Optional.empty());
+        return new SelectionCriteria(true, user, ImmutableSet.of(), user, Optional.empty(), Optional.ofNullable(source), tags, resourceEstimates, Optional.empty());
+    }
+
+    private SelectionCriteria newSelectionCriteriaUsers(String user, String originalUser, String authenticatedUser)
+    {
+        return new SelectionCriteria(true, user, ImmutableSet.of(), originalUser, Optional.ofNullable(authenticatedUser), Optional.empty(), Set.of(), EMPTY_RESOURCE_ESTIMATES, Optional.empty());
     }
 }
