@@ -13,37 +13,46 @@
  */
 package io.trino.execution;
 
-import com.google.common.collect.ImmutableMap;
 import io.airlift.units.Duration;
 import io.trino.spi.QueryId;
-import io.trino.testing.DistributedQueryRunner;
-import io.trino.tests.tpch.TpchQueryRunnerBuilder;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
+import io.trino.testing.QueryRunner;
+import io.trino.tests.tpch.TpchQueryRunner;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.Timeout;
+import org.junit.jupiter.api.parallel.Execution;
+
+import java.util.Map;
 
 import static io.trino.SessionTestUtils.TEST_SESSION;
 import static io.trino.execution.QueryRunnerUtil.createQuery;
 import static io.trino.execution.QueryRunnerUtil.waitForQueryState;
 import static io.trino.execution.QueryState.RUNNING;
-import static io.trino.plugin.tpch.TpchConnectorFactory.TPCH_SPLITS_PER_NODE;
 import static io.trino.testing.assertions.Assert.assertEventually;
 import static java.util.concurrent.TimeUnit.SECONDS;
-import static org.testng.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
+import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
 
+@TestInstance(PER_CLASS)
+@Execution(CONCURRENT)
 public class TestPendingStageState
 {
-    private DistributedQueryRunner queryRunner;
+    private QueryRunner queryRunner;
 
-    @BeforeClass
+    @BeforeAll
     public void setup()
             throws Exception
     {
-        queryRunner = TpchQueryRunnerBuilder.builder().buildWithoutCatalogs();
-        queryRunner.createCatalog("tpch", "tpch", ImmutableMap.of(TPCH_SPLITS_PER_NODE, "10000"));
+        queryRunner = TpchQueryRunner.builder()
+                .withConnectorProperties(Map.of("tpch.splits-per-node", "10000"))
+                .build();
     }
 
-    @Test(timeOut = 30_000)
+    @Test
+    @Timeout(30)
     public void testPendingState()
             throws Exception
     {
@@ -53,21 +62,21 @@ public class TestPendingStageState
         // wait for the query to finish producing results, but don't poll them
         assertEventually(
                 new Duration(10, SECONDS),
-                () -> assertEquals(queryRunner.getCoordinator().getFullQueryInfo(queryId).getOutputStage().get().getState(), StageState.RUNNING));
+                () -> assertThat(queryRunner.getCoordinator().getFullQueryInfo(queryId).getOutputStage().get().getState()).isEqualTo(StageState.RUNNING));
 
         // wait for the sub stages to go to pending state
         assertEventually(
                 new Duration(10, SECONDS),
-                () -> assertEquals(queryRunner.getCoordinator().getFullQueryInfo(queryId).getOutputStage().get().getSubStages().get(0).getState(), StageState.PENDING));
+                () -> assertThat(queryRunner.getCoordinator().getFullQueryInfo(queryId).getOutputStage().get().getSubStages().get(0).getState()).isEqualTo(StageState.PENDING));
 
         QueryInfo queryInfo = queryRunner.getCoordinator().getFullQueryInfo(queryId);
-        assertEquals(queryInfo.getState(), RUNNING);
-        assertEquals(queryInfo.getOutputStage().get().getState(), StageState.RUNNING);
-        assertEquals(queryInfo.getOutputStage().get().getSubStages().size(), 1);
-        assertEquals(queryInfo.getOutputStage().get().getSubStages().get(0).getState(), StageState.PENDING);
+        assertThat(queryInfo.getState()).isEqualTo(RUNNING);
+        assertThat(queryInfo.getOutputStage().get().getState()).isEqualTo(StageState.RUNNING);
+        assertThat(queryInfo.getOutputStage().get().getSubStages()).hasSize(1);
+        assertThat(queryInfo.getOutputStage().get().getSubStages().get(0).getState()).isEqualTo(StageState.PENDING);
     }
 
-    @AfterClass(alwaysRun = true)
+    @AfterAll
     public void tearDown()
     {
         if (queryRunner != null) {
